Fixed formating issue with editing crimes